--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -5,6 +5,6 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/board
+    url: jdbc:mysql://localhost:3306/board_project
     username: root
     password: 1q2w3e4r!
